Compile with previews enabled for Java 16